--- a/src/client/red-lip.css
+++ b/src/client/red-lip.css
@@ -4,3 +4,12 @@ $secondary: #17C3B2;
 $dark: #FFCB77;
 $light: #FEF9EF;
 $danger: #FE6D73; */
+
+h1 {
+    text-align: center;
+}
+
+.centered {
+    display: flex;
+    align-items: center;
+}
