--- a/src/client/red-lip.css
+++ b/src/client/red-lip.css
@@ -4,3 +4,28 @@ $secondary: #17C3B2;
 $dark: #FFCB77;
 $light: #FEF9EF;
 $danger: #FE6D73; */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+button {
+    background: lightgreen;
+    border: 4px solid #fff;
+    padding: 6px 12px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 1em;   
+}
+
+body {
+
+    margin: 0% 20%
+    
+}
