fixed the errors

--- a/src/client/red-lip.css
+++ b/src/client/red-lip.css
@@ -28,11 +28,11 @@ body {
     margin: 0% 20%
 }
     
-h1 {
+/* h1 {
     text-align: center;
 }
 
 .centered {
     display: flex;
     align-items: center;
-}
+} */
