--- a/src/client/red-lip.css
+++ b/src/client/red-lip.css
@@ -13,7 +13,22 @@ $danger: #FE6D73; */
 }
 
 button {
-    background: lightgreen;
+    background: lightseagreen;
+    border: 4px solid #fff;
+    padding: 6px 12px;
+    /* margin-bottom: 10px; */
+    border-radius: 4px;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 1em;
+    /* display: flex;
+    align-items: center;
+    justify-content: center;    */
+}
+
+.navigation-buttons {
+    /* background: lightgreen;
     border: 4px solid #fff;
     padding: 6px 12px;
     margin-bottom: 10px;
@@ -21,8 +36,23 @@ button {
     color: #fff;
     font-weight: bold;
     cursor: pointer;
-    font-size: 1em;   
+    font-size: 1em;   */
+    /* position: absolute;
+    background-color: whitesmoke;
+    color: #fff;
+    border-radius:10px; */
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+    display: flex;
+    justify-content: center; /* This centers the buttons horizontally in the flex container */
+    align-items: center; /* This aligns the buttons vertically center in the flex container */
+    gap: 10px; /* This adds space between the buttons */
+    background-color: whitesmoke;
+    padding: 10px;
+    border-radius: 10px;
 }
+
 
 body {
     margin: 0% 20%
