--- a/src/client/red-lip.css
+++ b/src/client/red-lip.css
@@ -1,92 +1,64 @@
-/* @import '~bootstrap/scss/bootstrap.scss';
-@primary:  #227C9D;
-$secondary: #17C3B2;
-$dark: #FFCB77;
-$light: #FEF9EF;
-$danger: #FE6D73; */
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-align: center;
-}
-
-button {
-    background: lightseagreen;
-    border: 4px solid #fff;
-    padding: 6px 12px;
-    /* margin-bottom: 10px; */
-    border-radius: 4px;
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    font-size: 1em;
-    /* display: flex;
-    align-items: center;
-    justify-content: center;    */
-}
-
-.navigation-buttons {
-    /* background: lightgreen;
-    border: 4px solid #fff;
-    padding: 6px 12px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    font-size: 1em;   */
-    /* position: absolute;
-    background-color: whitesmoke;
-    color: #fff;
-    border-radius:10px; */
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    gap: 10px; 
-    background-color: whitesmoke;
-    padding: 10px;
-    border-radius: 10px;
-}
-
-
-body {
-    margin: 0% 20%;
-    background-color: #FEF9EF ;
-}
-
-h3{
-    border-radius: 20rem;
-    padding: 6px 12px;;
-    background-color: #FFCB77;
-    margin-top: 2rem;
-}
-    
-h1 {
-    margin-top:2rem ;
-}
-
-.table {
-    background: #012B39;
-    border-radius: 0.25em;
-    border-collapse: collapse;
-    margin: 1em;
-  }
-
 /*
  * @Author: Peter Gao  & Christie laferriere
  * @Date: 2024-04-27 15:38:27 
  * @Last Modified by: peter_gao@outlook.com
- * @Last Modified time: 2024-04-28 07:56:42
+ * @Last Modified time: 2024-04-29 17:28:05
  */
 
- /*
+/*
 *  @Reviewer and modifier : Christie Laferriere
 * @Last Modified by: christie.laferriere@gmail.com
 * @Last Modified time: 2024-04-29 1:30 AM 
 * this version allows the front end to make requests to the server which makes requests to the API then the spoonacular database
 */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+button {
+  background: lightseagreen;
+  border: 4px solid #fff;
+  padding: 6px 12px;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+.navigation-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: whitesmoke;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+body {
+  margin: 0% 20%;
+  background-color: #fef9ef;
+}
+
+h3 {
+  border-radius: 20rem;
+  padding: 6px 12px;
+  background-color: #ffcb77;
+  margin-top: 2rem;
+}
+
+h1 {
+  margin-top: 2rem;
+}
+
+.table {
+  background: #012b39;
+  border-radius: 0.25em;
+  border-collapse: collapse;
+  margin: 1em;
+}
