--- a/src/client/red-lip.css
+++ b/src/client/red-lip.css
@@ -1,8 +1,8 @@
 /*
  * @Author: Peter Gao  & Christie laferriere
  * @Date: 2024-04-27 15:38:27 
- * @Last Modified by: peter_gao@outlook.com
- * @Last Modified time: 2024-04-29 17:28:05
+ * @Last Modified by: mikey.zhaopeng
+ * @Last Modified time: 2024-04-30 02:24:24
  */
 
 /*
@@ -56,8 +56,7 @@ h1 {
   margin-top: 2rem;
 }
 
-.table {
-  background: #012b39;
+table {
   border-radius: 0.25em;
   border-collapse: collapse;
   margin: 1em;
